--- a/index.html
+++ b/index.html
@@ -12,19 +12,29 @@
       <header class="topbar">
         <h1>MindMap Studio</h1>
         <div class="toolbar">
-          <button id="add-child" title="Add child node">+ Child</button>
-          <button id="add-sibling" title="Add sibling node">+ Sibling</button>
-          <button id="layout-horizontal" title="Auto layout left to right">Layout ↔</button>
-          <button id="layout-vertical" title="Auto layout top to bottom">Layout ↕</button>
-          <button id="zoom-in" title="Zoom in">+</button>
-          <button id="zoom-out" title="Zoom out">−</button>
-          <button id="fit-view" title="Fit map to screen">Fit</button>
-          <button id="undo" title="Undo (Ctrl+Z)">Undo</button>
-          <button id="redo" title="Redo (Ctrl+Shift+Z)">Redo</button>
-          <button id="export-map" title="Export JSON">Export</button>
-          <label class="file-label" title="Import JSON">Import<input id="import-map" type="file" accept="application/json" /></label>
-          <button id="reset-map" title="Reset map">Reset</button>
-          <button id="toggle-theme" title="Toggle theme">🌙</button>
+          <button id="add-child">+ Child</button>
+          <button id="add-sibling">+ Sibling</button>
+          <button id="add-floating">+ Floating</button>
+          <button id="duplicate-node">Duplicate</button>
+          <button id="toggle-collapse">Collapse branch</button>
+          <button id="focus-mode">Focus</button>
+          <button id="relation-mode">Relation: Off</button>
+          <button id="layout-mindmap">MindMap ⟷</button>
+          <button id="layout-horizontal">Tree ↔</button>
+          <button id="layout-vertical">Tree ↕</button>
+          <button id="templates">Templates</button>
+          <button id="command-palette">⌘K</button>
+          <button id="zoom-in">+</button>
+          <button id="zoom-out">−</button>
+          <button id="fit-view">Fit</button>
+          <button id="undo">Undo</button>
+          <button id="redo">Redo</button>
+          <button id="export-map">Export JSON</button>
+          <button id="export-md">Export MD</button>
+          <label class="file-label">Import JSON<input id="import-map" type="file" accept="application/json" /></label>
+          <label class="file-label">Import MD<input id="import-md" type="file" accept="text/markdown,.md,text/plain" /></label>
+          <button id="reset-map">Reset</button>
+          <button id="toggle-theme">🌙</button>
         </div>
       </header>
 
@@ -41,24 +51,54 @@
         </section>
 
         <aside class="sidepanel">
-          <h2>Node details</h2>
+          <h2>Topic details</h2>
           <div class="editor">
-            <label>Label<input id="node-label" type="text" placeholder="Node title" /></label>
-            <label>Notes<textarea id="node-note" rows="6" placeholder="Details, todos, links..."></textarea></label>
+            <label>Label<input id="node-label" type="text" placeholder="Topic title" /></label>
+            <label>Notes<textarea id="node-note" rows="5" placeholder="Details, todos, links..."></textarea></label>
             <label>Color<input id="node-color" type="color" /></label>
-            <button id="delete-node" class="danger">Delete node</button>
+            <label>Priority
+              <select id="node-priority">
+                <option value="0">None</option>
+                <option value="1">P1</option>
+                <option value="2">P2</option>
+                <option value="3">P3</option>
+                <option value="4">P4</option>
+                <option value="5">P5</option>
+              </select>
+            </label>
+            <label>Progress <span id="progress-label">0%</span>
+              <input id="node-progress" type="range" min="0" max="100" step="10" value="0" />
+            </label>
+            <button id="delete-node" class="danger">Delete topic</button>
           </div>
           <div class="tips">
-            <h3>Production workflow hints</h3>
+            <h3>XMind-style workflow</h3>
             <ul>
-              <li>Automatic save, undo/redo and import validation included.</li>
-              <li>Touch drag + zoom controls for mobile practicality.</li>
-              <li>GitHub Actions workflow added for build verification.</li>
+              <li>Use <strong>Floating</strong> topics for detached ideas.</li>
+              <li>Enable <strong>Relation mode</strong>, then click 2 topics to create relationships.</li>
+              <li>Use <strong>MindMap ⟷</strong> for balanced left/right layout from the central topic.</li>
             </ul>
           </div>
         </aside>
       </main>
     </div>
+
+    <dialog id="templates-dialog" class="modal">
+      <h3>Start from template</h3>
+      <div class="modal-actions">
+        <button data-template="project">Project Planning</button>
+        <button data-template="study">Study Notes</button>
+        <button data-template="content">Content Strategy</button>
+      </div>
+      <button id="close-templates" class="ghost">Close</button>
+    </dialog>
+
+    <dialog id="command-dialog" class="modal">
+      <h3>Command palette</h3>
+      <input id="command-search" type="search" placeholder="Type a command..." />
+      <div id="command-list" class="command-list"></div>
+      <button id="close-command" class="ghost">Close</button>
+    </dialog>
 
     <script type="module" src="/src/main.js"></script>
   </body>
